--- a/style.css
+++ b/style.css
@@ -161,6 +161,15 @@ body {
 	perspective: 1000px;
 	color: #94ca00;
 }
+.code {
+	display: block;
+	margin-top: 25px;
+	padding: 10px 10px 10px 35px;
+	background-color: #f3f3f3;
+	color: rgb(88, 88, 88);
+	text-align: left;
+	font-size: 1rem;
+}
 
 @keyframes shake {
 
